# newsroom

./: README.md  SKILL.md  pyproject.toml
newsroom/: __main__.py  audio.py  cli.py  config.py  models.py  research.py  scriptgen.py
tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_models.py  test_scriptgen.py
